fixed: PP 0 25lesson & overflow:scroll

--- a/css/style.css
+++ b/css/style.css
@@ -1157,7 +1157,7 @@ template {
   -ms-grid-columns: (minmax(min-content, 1fr))[4];
       grid-template-columns: repeat(4, minmax(-webkit-min-content, 1fr));
       grid-template-columns: repeat(4, minmax(min-content, 1fr));
-  grid-gap: 22px;
+  grid-gap: 20px;
   grid-auto-rows: minmax(40px, -webkit-min-content);
   grid-auto-rows: minmax(40px, min-content);
   -webkit-box-align: start;
@@ -1180,6 +1180,11 @@ template {
   -ms-grid-row: 1;
   -ms-grid-row-span: 3;
   grid-row: 1/4;
+}
+
+.footer__legal {
+  -ms-grid-column-align: end;
+      justify-self: end;
 }
 
 .footer__social-links {
@@ -1242,7 +1247,7 @@ template {
   font-weight: bold;
   font-size: 18px;
   line-height: 23px;
-  margin: 0 0 16px 0;
+  margin: 0 0 18px 0;
   text-transform: uppercase;
 }
 
@@ -1251,19 +1256,24 @@ template {
 }
 
 .footer__title--mb-3 {
-  margin-bottom: 30px;
+  margin-bottom: 25px;
+  margin-top: 13px;
+}
+
+.footer__title--mb-3-320 {
+  margin-top: 0;
+  margin-bottom: 33px;
 }
 
 .footer__item {
   display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
   font-size: 14px;
   line-height: 22px;
   color: #BDBDBD;
+  font-family: "Nunito", sans-serif;
 }
 
 .footer__item--mb-2 {
@@ -1276,12 +1286,18 @@ template {
 
 .footer__text {
   color: #BDBDBD;
-  margin-bottom: 22px;
+  margin-bottom: 24px;
+  margin-top: 0;
 }
 
 .footer__link {
   text-decoration: none;
   color: inherit;
+}
+
+.footer__tel-link {
+  text-decoration: none;
+  color: #BDBDBD;
 }
 
 .footer__input {
@@ -1366,6 +1382,7 @@ template {
   margin-right: 20px;
   text-decoration: none;
   color: #ffffff;
+  cursor: pointer;
 }
 
 .footer-bottom__img {
@@ -1519,8 +1536,8 @@ template {
     grid-row-gap: 40px;
   }
   .footer__input {
-    -ms-flex-preferred-size: 49%;
-        flex-basis: 49%;
+    -ms-flex-preferred-size: 47%;
+        flex-basis: 47%;
   }
   .footer__logo {
     width: 104px;
@@ -1540,7 +1557,10 @@ template {
         align-self: center;
   }
   .footer__title--inline {
-    margin-right: 32px;
+    margin-right: 27px;
+  }
+  .footer__title--mb-3 {
+    margin-top: 0;
   }
   .footer__categories {
     -ms-grid-row: 2;
@@ -1550,6 +1570,8 @@ template {
   }
   .footer__legal {
     grid-column: span 4;
+    -ms-grid-column-align: end;
+        justify-self: end;
   }
   .footer__additional {
     grid-column: span 4;
@@ -1564,6 +1586,7 @@ template {
     grid-column: span 10;
     -ms-grid-row: 4;
     grid-row: 4;
+    width: 539px;
   }
   .footer-bottom-wrapper {
     -ms-grid-columns: 61% 39%;
@@ -1625,6 +1648,7 @@ template {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    overflow: scroll;
   }
   .navbar-menu__item {
     margin-bottom: 20px;
@@ -1770,6 +1794,9 @@ template {
   .footer__message {
     width: 538px;
   }
+  .map__iframe {
+    width: 100%;
+  }
 }
 
 @media (max-width: 576px) {
@@ -1791,11 +1818,18 @@ template {
     top: 0;
     right: 0;
   }
+  .stars {
+    margin-right: 16px;
+  }
   .breadcrumb-list {
     padding-bottom: 15px;
   }
+  .hotel {
+    margin-bottom: 30px;
+    padding-top: 0;
+  }
   .hotel-grid {
-    margin-bottom: 40px;
+    margin-bottom: 0;
   }
   .hotel-info {
     padding-bottom: 38px;
@@ -1807,8 +1841,11 @@ template {
   .hotel-slider {
     height: 179px;
   }
+  .hotel-right {
+    min-height: 418px;
+  }
   .booking {
-    padding: 24px;
+    padding: 30px 24px;
     padding-bottom: 20px;
   }
   .newsletter {
@@ -1884,11 +1921,14 @@ template {
         -ms-flex-order: -1;
             order: -1;
   }
+  .card__title {
+    margin-bottom: 16px;
+  }
   .footer-wrapper {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
     margin-bottom: 30px;
-    grid-row-gap: 30px;
+    grid-row-gap: 35px;
   }
   .footer__logo {
     -ms-grid-row: 1;
@@ -1907,15 +1947,18 @@ template {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
   }
+  .footer__title {
+    margin-bottom: 11px;
+  }
   .footer__title--inline {
-    margin-bottom: 27px;
+    margin-bottom: 21px;
   }
   .footer__title--mb-3 {
-    margin-top: -10px;
-    margin-bottom: 32px;
+    margin-top: -16px;
+    margin-bottom: 29px;
   }
   .footer__title--mb-3-320 {
-    margin-top: 15px;
+    margin-top: 8px;
     margin-bottom: 15px;
   }
   .footer__additional {
@@ -1935,9 +1978,11 @@ template {
     grid-row: 3;
     -ms-grid-column: 1;
     grid-column: 1;
+    -ms-grid-column-align: start;
+        justify-self: start;
   }
   .footer__text {
-    margin: 0 0 20px 0;
+    margin: 0 0 27px 0;
   }
   .footer__icon-wrapper {
     min-width: 29px;
@@ -1947,12 +1992,14 @@ template {
     grid-row: 6;
     -ms-grid-column: 1;
     grid-column: 1;
+    padding-right: 41px;
   }
   .footer__contact-form {
     -ms-grid-row: 7;
     grid-row: 7;
     -ms-grid-column: 1;
     grid-column: 1;
+    width: 280px;
   }
   .footer__message {
     width: 280px;
@@ -2000,6 +2047,12 @@ template {
   }
   .footer-bottom__link:last-child {
     margin-right: 0;
+  }
+  .map {
+    position: relative;
+    height: 173px;
+    height: 173px;
+    bottom: 20px;
   }
 }
 /*# sourceMappingURL=style.css.map */
