--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -101,7 +101,7 @@
       grid-template-columns: repeat (12, 1fr)
       grid-row-gap: 40px          
     &__input
-      flex-basis: 49%
+      flex-basis: 47%
     &__logo
       width: 104px
       height: 120px
@@ -114,12 +114,15 @@
         align-self: center
     &__title
       &--inline
-        margin-right: 32px
+        margin-right: 27px
+      &--mb-3
+        margin-top: 0
     &__categories
       grid-row: 2/3 
       grid-column: span 4
     &__legal
       grid-column: span 4
+      justify-self: end
     &__additional
       grid-column: span 4
     &__contact
@@ -130,6 +133,7 @@
       &-form
         grid-column: span 10
         grid-row: 4 
+        width: 539px
     &-bottom
       &-wrapper
         grid-template-columns: 61% 39%
@@ -171,6 +175,7 @@
         display: block  
     &-menu
       flex-direction: column 
+      overflow: scroll
       &__item
         margin-bottom: 20px
         &--mobile
@@ -272,6 +277,8 @@
       width: 48%
     &__message
       width: 538px
+  .map__iframe
+    width: 100%
 @media (max-width: 576px)
   .container 
     max-width: 320px
@@ -292,12 +299,16 @@
         &--visible
           top: 0
           right: 0
+  .stars
+    margin-right: 16px
   .breadcrumb
     &-list
       padding-bottom: 15px
   .hotel
+    margin-bottom: 30px
+    padding-top: 0
     &-grid
-      margin-bottom: 40px
+      margin-bottom: 0
     &-info
       padding-bottom: 38px
     &__slider
@@ -305,8 +316,10 @@
       height: 179px
     &-slider
       height: 179px
+    &-right
+      min-height: 418px
   .booking
-    padding: 24px
+    padding: 30px 24px
     padding-bottom: 20px
   .newsletter
     padding: 76px 0 83px 0
@@ -356,11 +369,13 @@
       order: -3
     &:nth-child(4)
       order: -1
+    &__title
+      margin-bottom: 16px
   .footer
     &-wrapper
       grid-template-columns: 1fr
       margin-bottom: 30px
-      grid-row-gap: 30px
+      grid-row-gap: 35px
     &__logo
       grid-row: 1
       grid-column: 1
@@ -371,13 +386,14 @@
         display: flex
         flex-wrap: wrap
     &__title
+      margin-bottom: 11px
       &--inline
-        margin-bottom: 27px
+        margin-bottom: 21px
       &--mb-3
-        margin-top: -10px
-        margin-bottom: 32px
+        margin-top: -16px
+        margin-bottom: 29px
         &-320
-          margin-top: 15px
+          margin-top: 8px
           margin-bottom: 15px
     &__additional
       grid-row: 4
@@ -388,8 +404,9 @@
     &__legal
       grid-row: 3
       grid-column: 1
+      justify-self: start
     &__text
-      margin: 0 0 20px 0
+      margin: 0 0 27px 0
     &__icon
       &-wrapper
         min-width: 29px
@@ -397,9 +414,11 @@
       &-details
         grid-row: 6
         grid-column: 1
+        padding-right: 41px
       &-form
         grid-row: 7
         grid-column: 1
+        width: 280px
     &__message
       width: 280px
       margin-bottom: 15px
@@ -428,5 +447,11 @@
       &__link
         &:last-child
           margin-right: 0
+  .map
+    position: relative
+    height: 173px
+    &__iframe
+    height: 173px
+    bottom: 20px
 
     
