--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -6,7 +6,7 @@
   &-wrapper
     display: grid
     grid-template-columns: repeat(4, minmax(min-content, 1fr))
-    grid-gap: 22px
+    grid-gap: 20px
     grid-auto-rows: minmax(40px, min-content)
     align-items: start
     margin-bottom: 95px
@@ -16,6 +16,8 @@
     align-self: stretch
   &__categories
     grid-row: 1/4
+  &__legal
+    justify-self: end
   &__social
     &-links
       display: flex
@@ -40,23 +42,28 @@
   &__ul
     padding: 0
     margin: 0
-    list-style: none
+    list-style: none 
   &__title
     font-weight: bold
     font-size: 18px
     line-height: 23px
-    margin: 0 0 16px 0
+    margin: 0 0 18px 0
     text-transform: uppercase
     &--inline
       margin: 0 43px 0 0
     &--mb-3
-      margin-bottom: 30px
+      margin-bottom: 25px
+      margin-top: 13px
+      &-320
+        margin-top: 0
+        margin-bottom: 33px
   &__item
-    display: flex
+    display: -webkit-box
     align-items: flex-start
     font-size: 14px
     line-height: 22px
     color: $footer-text-color
+    font-family: "Nunito", sans-serif
     &--mb-2
       margin-bottom: 20px
   &__icon
@@ -64,10 +71,15 @@
       min-width: 40px
   &__text
     color: $footer-text-color
-    margin-bottom: 22px
+    margin-bottom: 24px
+    margin-top: 0
   &__link
     text-decoration: none
-    color: inherit
+    color: inherit   
+  &__tel 
+    &-link
+      text-decoration: none
+      color: $footer-text-color
   &__input
     background-color: #ffffff
     border-radius: 4px
@@ -123,6 +135,7 @@
     margin-right: 20px
     text-decoration: none
     color: $light
+    cursor: pointer
   &__img
     align-self: end
     justify-self: end
